<resources>
    <string name="app_name" translatable="false">OutSports</string>

    <string name="map_key" translatable="false">AIzaSyCTuxZDmWIe-lag0UVxETfPTdvd9RNtXJQ</string>

    <string name="title_home">Your Runs</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_profile">Profile</string>
    <string name="title_setup">Setup</string>
    <string name="title_statistics_months">Statistics Months</string>
    <string name="title_activity_tracking">Activity Tracking</string>
    <string name="title_settings">Settings</string>
    <string name="title_see_activity">View Activity</string>
    <string name="title_group_accession">Group Activity</string>

    <string name="welcome">Welcome! Fill in your personal details</string>
    <string name="your_name">Your Name</string>
    <string name="your_height">Your Height</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_email">Your Email</string>
    <string name="your_birthday">Your Birthday</string>
    <string name="birthday_error">Invalid birth date, must be over 5 years old. Please enter a valid date</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="setupvalues">Continue</string>
    <string name="err">Error</string>

    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="normal">Normal</string>

    <string name="select_units_for_distance">"Select units for distance "</string>
    <string name="select_units_for_weight">"Select units for weight "</string>
    <string name="select_units_for_height">"Select units for height "</string>
    <string name="select_the_language">"Select the language "</string>

    <string name="metric">Metric (km)</string>
    <string name="imperial">Imperial (mi)</string>
    <string name="kilograms">Kilograms (kg)</string>
    <string name="pounds">Pounds (lb)</string>
    <string name="centimeters">Centimeters (cm)</string>
    <string name="foot">Foot (ft)</string>

    <string name="portuguese">Portuguese</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>

    <string name="km" translatable="false">km</string>
    <string name="mi" translatable="false">mi</string>
    <string name="lb" translatable="false">lb</string>
    <string name="mt" translatable="false">mt</string>
    <string name="ft" translatable="false">ft</string>
    <string name="kg" translatable="false">kg</string>
    <string name="cm" translatable="false">cm</string>

    <string name="annual_race_statistics">Annual Race Statistics</string>
    <string name="more">More</string>
    <string name="recent_activities">Recent Activities</string>

    <string name="average_pace">Average Pace</string>
    <string name="total_calories_burned">Calories Burned</string>
    <string name="total_time">Total Time</string>
    <string name="total_distance">Total Distance</string>

    <string name="start">Start Activity</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    <string name="activities">Activities</string>
    <string name="noactivity_recorded">No Activity Recorded</string>
    <string name="save_activity_sucess">Activity Successfully Saved</string>
    <string name="save_activity_error">Error Saving Activity</string>
    <string name="delete_activity_title">Delete Activity</string>
    <string name="delete_activity_message">Are you sure you want to delete this activity?</string>

    <string name="activity_distance">Distance</string>
    <string name="activity_coordinates">Coordinates</string>
    <string name="activity_coordinates_latitude">Latitude: </string>
    <string name="activity_coordinates_longitude">Longitude: </string>

    <string name="activity_point_interest_name">Point of interest name</string>
    <string name="activity_delete_point_interest_title">Delete Point of Interest</string>
    <string name="activity_delete_point_interest_message">Are you sure you want to delete this point of interest?</string>

    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="group_choose">Choose a group</string>
    <string name="group_name">Group name</string>
    <string name="group_distance">Safety distance</string>
    <string name="group_distance_switch_on">Activated</string>
    <string name="group_distance_switch_off">Disabled</string>
    <string name="mensage_group_create">Group created successfully</string>
    <string name="group_acess_denied">Access Denied</string>
    <string name="group_add_user_title">Add User</string>
    <string name="group_add_user_mensage">The user %s want to join the group, do you want to allow access?</string>
    <string name="group_delete_user_mensage"> successfully deleted</string>
    <string name="group_user_color_error_mensage">The chosen color has already been assigned to another user</string>
    <string name="group_available">There are no groups available</string>
    <string name="group_expel_user">Expel User</string>
    <string name="group_expel_user_mensage">Are you sure you want to expel %s from the group?</string>
    <string name="group_distance_mensage">WARNING! The user %s is too far away from you</string>
    <string name="group_name_error">Please enter name for the group</string>
    <string name="group_distance_error">Please enter the distance</string>
    <string name="group_distance_invalid_error">Please enter the distance between %.2f and %.2f</string>
    <string name="group_min_user_error">Please add users to the group</string>
    <string name="group_color_error">Please choose a color for each user</string>

    <string name="fields_error">Please fill out all the fields</string>
    <string name="save_sucess">Saved changes</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="weight_status_names">
        <item>Underweight</item>
        <item>Healthy Weight</item>
        <item>Overweight</item>
        <item>Obese</item>
        <item>Extremely Obese</item>
    </string-array>

    <string-array name="name_day_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


</resources>